<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="author_placeholder">Author name</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="published_placeholder">Time of published</string>
    <string name="menu_edit">Edit</string>

    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="newer_posts">New posts: %1$s</string>
    <string name="description_take_photo">Take a photo</string>
    <string name="description_select_photo">Select a photo</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Photo</string>
    <string name="menu_save">Save</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="authorize">enter</string>
    <string name="error_blank_username">Enter username</string>
    <string name="error_blank_password">Enter password</string>
    <string name="error_blank_auth">Enter username and password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">login</string>
    <string name="repeat_password">password (repeat)</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="incorrect_credentials">Incorrect login and/or password. Please, try again</string>
    <string name="logout">Log out</string>
    <string name="sign_in">Sign in</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="error_blank_fields">Fill in all the fields</string>
    <string name="error_passwords">Enter the same password in both fields</string>
    <string name="upload_avatar">Upload avatar</string>
    <string name="messageFromServer">A message from server %1$s</string>
    <string name="retry">Retry</string>
    <string name="attachment">Attachment</string>
    <string name="your_post">Your post:</string>
    <string name="invalid_auth">Invalid login/password</string>
    <string name="blankAuth">Login or password is blank</string>
    <string name="close_button">Close</string>
    <string name="greeting">Hi! \n Let`s get started! \n Join NMedia!</string>
    <string name="join">Join</string>
    <string name="blankRegister">Name, login or password is blank</string>
    <string name="match_passwords">Passwords must match</string>
    <string name="description_preview">Image preview</string>
    <string name="clear_avatar">Clear avatar</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="description_choose_gallery">Choose image from the gallery</string>
    <string name="description_make_photo">Make a photo</string>
    <string name="avatar">Avatar</string>
    <string name="authorization">Authorization</string>
    <string name="users">Users</string>
    <string name="add_new_post">Add new post</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="confirm_signOut">Are you sure?</string>
    <string name="sign_out">Sign out</string>
    <string name="add_event">Add event</string>
    <string name="clear_coordinates">Clear coordinates</string>
    <string name="create_post">Create</string>
    <string name="add_place">Place</string>
    <string name="clear_image">Clear Image</string>
    <string name="add_image">Image</string>
    <string name="link">Link</string>
    <string name="invalid_link">Invalid link</string>
    <string name="add_time">Time</string>
    <string name="add_date">Date</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="user">User</string>
    <string name="menu_delete">Delete</string>
    <string name="location">Location</string>
    <string name="description_like_button">Like</string>
    <string name="type_of_event">Type of event</string>
    <string name="date_of_event">Date of event</string>
    <string name="edit">Edit</string>
    <string name="dash">–</string>
    <string name="button_back">Button back</string>
    <string name="description_full_screen_image">Full screen image</string>
    <string name="add_job">Add job</string>
    <string name="empty_jobs">No jobs added</string>
    <string name="jobs">Jobs</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="position">Position</string>
    <string name="job">Job</string>
    <string name="empty_datetime">Date and time can`t be empty</string>

</resources>