<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.RegistrationFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="?actionBarSize">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/registerWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/common_spacing"
                    android:text="@string/join"
                    android:textColor="@color/color_primary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/avatar_preview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                    android:id="@+id/avatar_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/common_spacing"
                    app:layout_constraintBottom_toTopOf="@id/signUpName">

                <ImageView
                        android:id="@+id/register_avatar"
                        android:layout_width="@dimen/posts_avatar_size"
                        android:layout_height="@dimen/posts_avatar_size"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/description_preview"
                        tools:srcCompat="@tools:sample/avatars" />

                <TextView
                        android:id="@+id/clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/clear_avatar"
                        android:textColor="@color/color_primary" />

            </LinearLayout>


            <EditText
                    android:id="@+id/signUpName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:autofillHints="name"
                    android:background="@drawable/card_line"
                    android:layout_margin="@dimen/common_spacing"
                    android:paddingHorizontal="@dimen/common_spacing"
                    android:hint="@string/name"
                    android:inputType="text"
                    app:layout_constraintBottom_toTopOf="@id/signUpLogin" />

            <EditText
                    android:id="@+id/signUpLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginVertical="@dimen/common_spacing"
                    android:autofillHints="username"
                    android:background="@drawable/card_line"
                    android:layout_margin="@dimen/common_spacing"
                    android:paddingHorizontal="@dimen/common_spacing"
                    android:hint="@string/login"
                    android:inputType="text"
                    app:layout_constraintBottom_toTopOf="@id/signUpPassword" />

            <EditText
                    android:id="@+id/signUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginVertical="@dimen/common_spacing"
                    android:autofillHints="password"
                    android:background="@drawable/card_line"
                    android:layout_margin="@dimen/common_spacing"
                    android:paddingHorizontal="@dimen/common_spacing"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@id/confirmPassword" />

            <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginVertical="@dimen/common_spacing"
                    android:autofillHints="password"
                    android:background="@drawable/card_line"
                    android:layout_margin="@dimen/common_spacing"
                    android:paddingHorizontal="@dimen/common_spacing"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@id/registerButton" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/sign_up"
                    style="@style/Widget.AppTheme.SubmitButton"
                    app:layout_constraintBottom_toBottomOf="@id/bottomAppBar"
                    app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>

    <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:contentDescription="@string/close_button"
            android:padding="@dimen/common_spacing"
            android:src="@drawable/close" />

    <LinearLayout
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?colorPrimary">

        <ImageView
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_choose_gallery"
                android:padding="@dimen/common_spacing"
                app:srcCompat="@drawable/add_photo_gallery" />

        <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_make_photo"
                android:padding="@dimen/common_spacing"
                app:srcCompat="@drawable/make_photo" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>