<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginFragment">

    <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button"
            android:padding="@dimen/common_spacing"
            android:src="@drawable/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/loginWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing"
            android:text="@string/sign_in"
            android:textColor="@color/color_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/signUpLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/signUpLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_margin="@dimen/common_spacing"
            android:autofillHints="username"
            android:background="@drawable/card_line"
            android:hint="@string/login"
            android:inputType="text"
            android:paddingHorizontal="@dimen/common_spacing"
            app:layout_constraintBottom_toTopOf="@id/signUpPassword" />

    <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_margin="@dimen/common_spacing"
            android:autofillHints="password"
            android:background="@drawable/card_line"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/common_spacing"
            app:layout_constraintBottom_toTopOf="@id/loginButton" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Widget.AppTheme.SubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>